--- a/web/content/templates/login.html
+++ b/web/content/templates/login.html
@@ -1,5 +1,6 @@
 <div class="login">
 	<h2>Please login to see our site</h2>
+	<a href="../#/registration">Or register if you didn't</a>
 	<form name="loginForm" class="loginForm">
 		<input type="email" placeholder="Email" name="email" ng-model="email" required ng-pattern="/^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/i">
 		<input type="password" placeholder="Password" name="password" ng-model="password" required>
