--- a/web/content/templates/registration.html
+++ b/web/content/templates/registration.html
@@ -13,7 +13,7 @@
 			<span class="alert-box warning" ng-show="rPasswordErrorVis">Please enter the same value again.</span>
 		</div>
 		<div class="req">
-			<input type="text" placeholder="Nickname" name="nickname" ng-model="regData.nickname" required ng-pattern="/^[a-z0-9-]+$/" ng-minlength="2" ng-change="nicknameChange()">
+			<input type="text" placeholder="Nickname" name="nickname" ng-model="regData.nickname" required ng-pattern="/^[A-z0-9-]+$/" ng-minlength="2" ng-change="nicknameChange()">
 			<span class="alert-box warning" ng-show="nicknameErrorVis">{{nicknameError}}</span>
 		</div>
 		<input type="text" placeholder="First Name" name="firstName" ng-model="regData.firstName">
@@ -23,7 +23,7 @@
 		<span class="error" ng-show="regForm.password.$error.minlength">Password must consist of more than six symbols</span>
 		<span class="error" ng-show="regForm.password.$error.maxlength">Password is too long</span>
 		<span class="error" ng-show="regForm.nickname.$error.pattern || regForm.nickname.$error.minlength">Invalid nickname</span>
-		<button class="button" ng-click="register()" ng-disabled="!regForm.email.$valid || !regForm.password.$valid || !regForm.nickname.$valid || myPermisson || emailErrorVis || nicknameErrorVis">Submit</button>
+		<button class="button" ng-click="register()" ng-disabled="!regForm.$valid || myPermisson || emailErrorVis || nicknameErrorVis">Submit</button>
 		<div class="info"><span style="color: red; font-size: 20px;">*</span> - Required fields</div>
 	</form>
 </div>
