--- a/web/content/css/custom.css
+++ b/web/content/css/custom.css
@@ -66,6 +66,12 @@ header {
 	-webkit-transform: rotate(-2deg);
 }
 
+.myHeader .myMenu .verticalNav li a {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
 .content {
 	width: 980px;
 	margin: 0 auto;
@@ -162,6 +168,10 @@ header {
 	width: 190px;
 }
 
+.content .createTalk .talkForm .file {
+	width: 300px;
+}
+
 .content .createTalk .talkForm .button {
 	display: block;
 	width: 200px;
@@ -170,4 +180,49 @@ header {
 
 .content .createTalk .req:after  {
 	top: 20px;
+}
+
+.content .main .talks {
+	width: 930px;
+	margin: 0 auto;
+	padding: 0;
+	list-style-type: none;
+	clear: both;
+	overflow: hidden;
+}
+
+.content .main .talks li {
+	float: left;
+	display: block;
+	width: 310px;
+	height: 200px;
+}
+
+.content .main .talks .talkPrev {
+	position: relative;
+	display: block;
+	height: 180px;
+	margin: 10px;
+	box-sizing: border-box;
+	-webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+	-moz-box-shadow:    0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+	box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.75);	
+}
+
+.content .main .talks .talkPrev .title {
+	position: absolute;
+	display: block;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	font-size: 20px;
+	line-height: 30px;
+	color: white;
+	background-color: rgba(183, 183, 183, 0.5);
+	text-align: center;
+}
+
+.content .main .canCreate {
+	text-align: center;
+	line-height: 50px;
 }
