--- a/web/content/templates/createTalk.html
+++ b/web/content/templates/createTalk.html
@@ -15,7 +15,7 @@
 			<label>Date of talk</label>
 			<input type="datetime-local" name="date" ng-model="talk.date" required>
 		</div>
-		<div class="file">
+		<div class="req file">
 			<label>Image</label>
 			<input type="file" id="image" name="image" ng-model="talk.image"  accept="image/*" ng-file-select required>
 		</div>
