--- a/web/content/templates/main.html
+++ b/web/content/templates/main.html
@@ -5,4 +5,5 @@
 			<talk  data="talk"></talk>
 		</li>
 	</ul>
+	<button class="moreButton" ng-show="isAll" ng-click="moreTalks()">More</button>
 </section>
