--- a/web/content/templates/registration.html
+++ b/web/content/templates/registration.html
@@ -23,9 +23,9 @@
 			<span class="error" ng-show="regForm.regEmail.$error.pattern">Invalid email</span>
 			<span class="error" ng-show="regForm.regPassword.$error.minlength">Password must consist of more than six symbols</span>
 			<span class="error" ng-show="regForm.regPassword.$error.maxlength">Password is too long</span>
+			<span class="error" ng-show="regForm.regNickname.$error.pattern || regForm.regNickname.$error.minlength">Invalid nickname</span>
 		</div>
-		<span class="error" ng-show="regForm.regNickname.$error.pattern || regForm.regNickname.$error.minlength">Invalid nickname</span>
-		<button class="button" ng-click="register()" ng-disabled="!regForm.$valid || myPermisson || emailErrorVis || nicknameErrorVis">Submit</button>
+		<button class="button" ng-click="register()" ng-disabled="!regForm.$valid || myPermisson || !!emailError || !!nicknameError">Submit</button>
 		<div class="info"><span style="color: red; font-size: 20px;">*</span> - Required fields</div>
 	</form>
 </div>
