--- a/web/content/templates/userInfo.html
+++ b/web/content/templates/userInfo.html
@@ -2,16 +2,24 @@
 	<div class="wrapper">
 		<h3>User {{(!!userData.firstName && !!userData.lastName) ? userData.firstName + " " + userData.lastName : user.nickname}}</h3>
 		<div ng-show="!!userData.city">
-			Address
+			Address:
 			<span>{{userData.city}}</span>
 		</div>
 		<div ng-show="!!userData.about">
-			Information about user
+			Information about user:
 			<span class="big">{{userData.about}}</span>
 		</div>
 		<div ng-show="!!userData.job">
-			Information about user
+			Job:
 			<span>{{userData.job}}</span>
+		</div>
+		<div ng-show="!!userData.talks">
+			<h4>Most popular talk of {{userData.talksNumber}}</h4>
+			<ul class="talks">
+				<li ng-repeat="(key, value) in userData.talks">
+					<a href="#/talk/{{value._id}}">{{value.title}}</a>
+				</li>
+			</ul>
 		</div>
 	</div>
 </div>
