--- a/web/content/templates/talk.html
+++ b/web/content/templates/talk.html
@@ -12,24 +12,26 @@
 			</article>
 			<div class="sub">
 				<div class="subLinks clearfix">
-					<a href="../talk/subscribe" class="subButton" ng-disabled="!talk.isCanSubscribe">Subscribe</a>
-					<div ng-show="true">
+					<a href="../talk/subscribe" class="subButton button" ng-if="talk.isCanSubscribe" ng-click="subscribe($event)">Subscribe</a>
+					<div ng-if="talk.isCanEvaluate">
 						Evaluate:
-						<a href="../talk/like" class="evalButton like" ng-cick="like($event)">+</a>
-						<a href="../talk/dislike" class="evalButton dislike" ng-cick="disike($event)">-</a>
+						<a href="../talk/like" class="evalButton like" ng-click="like($event)">+</a>
+						<a href="../talk/dislike" class="evalButton dislike" ng-click="disike($event)">-</a>
 						<span>Rating: {{talk.rating}}</span>
 					</div>
 				</div>
-				<ul class="subscribers" ng-show="!!talk.participants">
-					<!-- <li ng-repeat="(key, value) in talk.participants">lol</li> -->
+				<ul class="subscribers" ng-if="!!talk.participants.length" >
+					<li ng-repeat="(key, value) in talk.participants">
+						<a class="participant" href="#/userinfo/{{value.nickname}}">{{value.nickname}}</a>
+					</li>
 				</ul>
 			</div>
-			<div class="comments" ng-show="!!comments.comments">
+			<div class="comments" ng-if="!!comments.comments">
 				<div class="commentsWrapper">
 					<comment ng-repeat="(key, value) in comments.comments" data="value"></comment>
 				</div>
 				<form name="commentForm" class="commentsCreater">
-					<textarea name="comment" placeholder="Comment" require></textarea>
+					<textarea name="comment" placeholder="Comment" ng-model="newComment" required></textarea>
 					<button class="button" ng-click="createComment($event)" ng-disabled="!commentForm.$valid">Submit</button>
 				</form>
 			</div>
